@@ -3,13 +3,13 @@ Hash: SHA1
 
 DIST xfce4-settings-4.5.92.tar.bz2 414685 RMD160 2be522f6828a46f0348d1942bad066de974d65a1 SHA1 3197160edb6c390e11dae0a1cebd1207e6ff6a74 SHA256 a2c00e5890cb683aa353e2d7f64cd01cbf741209e5e7f124e477ce14c010e2c7
 EBUILD xfce4-settings-4.5.92.ebuild 1082 RMD160 85c665006568e0e3d798f5487c4a46c541a697a8 SHA1 aa5e1e02c1a91ba6936027af24ead183e16d7a26 SHA256 2bf76a0fd32c362721020530c728c287c1c8625440a1cab956121515740e56f4
-EBUILD xfce4-settings-9999.ebuild 1091 RMD160 fe27a71cdbae4989a3bdcf3d17b3c0dbdd91dc0b SHA1 6732e08c99277520e2bc35e29d3ebd0c6ea9f3b3 SHA256 2c5dbd0e1503aa9eca379104c2eee9aac56ef3f340d1663ba0378c74499166f0
-MISC ChangeLog 1727 RMD160 73a8852a242cecd5c620c6329855b6f5c35c0340 SHA1 2dd20418fae6ca1dd72d3602f0d1adef0c2e0449 SHA256 7b55569c0de353bef1634b2ca48907de18b97c737f31cb492a083e14af6f40d5
+EBUILD xfce4-settings-9999.ebuild 1204 RMD160 9703cd27e7701d3c79d3441672d6baf49b96ab45 SHA1 a6b1baf8c20957de9a48a2c85f23072811ad4618 SHA256 cdfdbd0cb60e73a240e8fb69521a65ce325173780c45184b1a42abbc1674bae8
+MISC ChangeLog 1829 RMD160 209ed5d1449a4a511bcbec555f728a188ad75fec SHA1 ac728d94b39e52bbe0db1655e69c229b9a41cc68 SHA256 144c1cca6e9adaaa1860cbd43bb6c7d16cfbce18159d917329fd61c28ab76f15
 MISC metadata.xml 363 RMD160 2f66508d394f9cc14654775f3a0b117bc10d3ef5 SHA1 8a3e6715e41535ea04377624a621c9ada60fd5ff SHA256 2442135d806e37420f1904d5b32e8b7afe94ed212307d25667f363db06c558e3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkgW6wACgkQKhnDs22gwa8X4wCfZQ4mBzvDQSdLOjrGRnAV4jIp
-dsUAn0F/HyLjkXPrDDC1XJ6rywmcCSFe
-=abaj
+iEYEARECAAYFAkk+j8UACgkQKhnDs22gwa8MAQCgi6IWyZJRgtIpLU0gl6lxBtg/
+dZ8An3iRcQ+2F5BpmxKKyWaJuyg2DzEW
+=xwRV
 -----END PGP SIGNATURE-----
