@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Dec 2008; Christoph Mende <angelos@gentoo.org>
+  xfce4-settings-9999.ebuild:
+  Fixed make check
+
   16 Nov 2008; Christoph Mende <angelos@gentoo.org>
   xfce4-settings-4.5.92.ebuild, xfce4-settings-9999.ebuild:
   Added use_enable for USE=keyboard
